# pyqupa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pypass/: __init__.py  __main__.py  app.py  passes.py  quaeldich.py  tools.py
pypass/db/: pass_names.json  passes.json
pyqupa/: __init__.py  __main__.py  app.py  passes.py  quaeldich.py
pyqupa/db/: pass_names.json
tests/: test_cli.py  test_passes.py
tests/test_db/: pass_names.json  passes.json
